Fix bug phần Logo

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
     </head>
     <body>
         <main>
-            <!-- Header -->
-            <header class="header">
+            <header class="fixed-header">
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo -->
-                        <img src="./assets/img/logo.svg" alt="Besnik." />
+                        <a href="#!"
+                            ><img src="./assets/img/logo.svg" alt="Besnik."
+                        /></a>
 
                         <!-- Navigation -->
                         <ul>
@@ -44,7 +45,11 @@
                             <a href="#!" class="btn action-btn">Sign up</a>
                         </div>
                     </nav>
-                    <!-- Hero -->
+                </div>
+            </header>
+            <!-- Hero -->
+            <div class="hero-wrap">
+                <div class="content">
                     <div class="hero">
                         <div class="info">
                             <p class="sub-title">Welcome to Besnik Agency</p>
@@ -67,7 +72,7 @@
                         />
                     </div>
                 </div>
-            </header>
+            </div>
 
             <!-- Clients -->
             <div class="clients">
@@ -479,7 +484,7 @@
                         <div class="column">
                             <h3 class="heading">Get in touch</h3>
                             <p class="desc">
-                                You’ll find your next home, in any style you
+                                You'll find your next home, in any style you
                                 prefer.
                             </p>
                             <div class="social">
